# IMPRESS

./: .gitignore  404.html  README.md  README.txt  af2_multimer_reduced.sh  index.html  jon_job.sh  mkdocs.yml  objects.inv  pyproject.toml  setup.py  sitemap.xml  slurmit_BAY.py  tox.ini
.github/workflows/: docs.yml  tests.yml
analysis/: radical-plotting-v2.ipynb  radical-plotting.ipynb
docs/: index.md
docs/getting-started/: adaptive-pipelines.md  installation.md  quick-start.md
docs/pipelines/: overview.md  pre_built-pipelines.md
examples/: basic.py  dummy.py  dummy_adaptive.py  protein_binding.py
examples/agentic/: agent.py  dummy_adaptive.py  explanation.md
examples/discontinuous_scaffolds/: CLAUDE.md  README.md  discontinuous_scaffolds.py  run_discontinuous_scaffolds.py
examples/impress-flowgentic/: README.md  claude-session-impress-flowgentic.txt  pyproject.toml
examples/impress-flowgentic/impress_flowgentic/: __init__.py  adaptive.py  base.py  io.py  manager.py  mocks.py  pipeline.py  runner.py  setup.py  state.py
examples/impress-flowgentic/scripts/: run_impress_flowgentic.py
examples/impress-flowgentic/workspace/: af_stats_p1_pass_1.csv  af_stats_p1_pass_2.csv  af_stats_p1_pass_3.csv  af_stats_p1_pass_4.csv  af_stats_p1_sub1_pass_2.csv  af_stats_p1_sub1_pass_3.csv  af_stats_p1_sub1_pass_4.csv  run_summary.json
examples/impress-flowgentic/workspace/af_pipeline_outputs_multi/p1/af/prediction/best_ptm/: protein_c.json
examples/impress-flowgentic/workspace/af_pipeline_outputs_multi/p1_sub1/af/prediction/dimer_models/protein_b/: protein_b_ranking_debug.json
examples/impress-flowgentic/workspace/ensemble/: p1_records.jsonl  p1_sub1_records.jsonl
examples/protein_binding/: CLAUDE.md  README.md  plddt_extract_pipeline.py  protein_binding.py  protein_binding_run.py  run_protein_binding.py
examples/protien_binding_usecase/: README.md  plddt_extract_pipeline.py  reduced_db.ff  run_protein_binding.py
examples/secondary_diffusion/: run_secondary_diffusion.py  secondary_diffusion.py
examples/small_molecule_binding/: CLAUDE.md  README.md  mock.py  run_small_molecule_binding.py  run_test_small_molecule_binding.py  small_molecule_binding.py
getting-started/adaptive-pipelines/: index.html
getting-started/installation/: index.html
getting-started/quick-start/: index.html
mpnn/: af_check.py
mpnn_entk/: run_mpnn_entk.py
multi/: af_check.py  find_binders_af.py
pipelines/pre_built-pipelines/: index.html
search/: search_index.json
setup/: environment.yml  readme.md
src/: impress_manager.py  impress_pipeline.py
src/agentic/: ProteinBindingPipelineAgent.py  __init__.py  agent.py  prototyping.ipynb  readme.md  testbox.py  vllm_server.sh
src/entk_multi/: run_mpnn_entk.py
src/impress/: __init__.py  impress_manager.py  impress_pipeline.py
src/launch_scripts/: batch_amarel.slurm
src/original/: README.txt  find_binders_af.py  mpnn_af_pipeline.py  run_mpnn_entk.py
src/pipelines/: protein_binding.py
src/rp/: joey_utils.py  make_af_fasta.py  mpnn_wrapper.py  plddt_extract_pipeline.py  plot_adaptive.py  radical_pipeline_adaptive.py  run_mpnn_rp_multi.py  run_mpnn_rp_single.py
tests/: conftest.py
(+133 files in other folders)
