[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "impress"
version = "0.1.0"
description = "IMPRESS Protein Binding and Prediction Framework for HPC"
authors = [
    {name = "Aymen Alsaadi"},
    {name = "Javier D. Segura"}
]


readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pydantic",
    "agnostic_agent @ git+https://github.com/stride-research/AgnosticAgent.git@main",
    "radical.asyncflow @ git+https://github.com/radical-cybertools/radical.asyncflow.git@main"
]

[tool.setuptools.packages.find]
where = ["src"] 